--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,26 @@ matrix:
     - language: sh
       os:
         - linux
+      env:
+        - PWSH_VERSION=6.1.2
+        - PATH=$HOME/bin/pwsh:$PATH
       before_script:
-        - chmod +x install_linux.sh
-        - ./install_linux.sh
+        - mkdir -p $HOME/bin/pwsh
+        - curl -sSL -o $HOME/bin/pwsh/pwsh.tar.gz https://github.com/PowerShell/PowerShell/releases/download/v$PWSH_VERSION/powershell-$PWSH_VERSION-linux-x64.tar.gz
+        - tar -xf $HOME/bin/pwsh/pwsh.tar.gz -C $HOME/bin/pwsh
+        - chmod +x $HOME/bin/pwsh/pwsh
       script:
-        - chmod +x test_unix.sh
         - ./test_unix.sh
     - language: sh
       os:
         - osx
+      env:
+        - PWSH_VERSION=6.1.2
+        - PATH=$HOME/bin/pwsh:$PATH
       before_script:
-        - chmod +x install_osx.sh
-        - ./install_osx.sh
+        - mkdir -p $HOME/bin/pwsh
+        - curl -sSL -o $HOME/bin/pwsh/pwsh.tar.gz https://github.com/PowerShell/PowerShell/releases/download/v$PWSH_VERSION/powershell-$PWSH_VERSION-osx-x64.tar.gz
+        - tar -xf $HOME/bin/pwsh/pwsh.tar.gz -C $HOME/bin/pwsh
+        - chmod +x $HOME/bin/pwsh/pwsh
       script:
-        - chmod +x test_unix.sh
         - ./test_unix.sh
